added basic data fetching for list and details of pokemons

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-query-devtools": "^5.84.2",
     "@tanstack/react-router": "^1.131.2",
     "@tanstack/react-router-devtools": "^1.131.2",
     "ky": "^1.8.2",
@@ -24,8 +25,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
-    "@tanstack/router-plugin": "^1.131.2",
     "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@tanstack/router-plugin": "^1.131.2",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
